--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <canvas id="canvas1"></canvas>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.js" defer></script>
   </body>
 </html>
