Removed style.css and placed styles in style tags in index html, updated readme, and other minor changes

--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Running Dog</title>
-    <link rel="stylesheet" href="styles.css" />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        background-color: black;
+      }
+
+      #gameCanvas {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 100%;
+        max-height: 100%;
+        border: 4px white solid;
+      }
+    </style>
   </head>
   <body>
-    <canvas id="canvas1"></canvas>
+    <canvas id="gameCanvas"></canvas>
     <script type="module" src="main.js" defer></script>
   </body>
 </html>
