--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Running Dog</title>
+    <link rel="icon" href="assets/sprites/ui/lives.png" type="image/x-icon">
     <style>
       * {
         margin: 0;
