--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Running Dog</title>
-    <link rel="icon" href="assets/sprites/ui/lives.png" type="image/x-icon">
+    <link rel="icon" href="sprites/ui/lives.png" type="image/x-icon">
     <style>
       * {
         margin: 0;
@@ -29,6 +29,6 @@
   </head>
   <body>
     <canvas id="gameCanvas"></canvas>
-    <script type="module" src="main.js" defer></script>
+    <script type="module" src="lib/main.js" defer></script>
   </body>
 </html>
