--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
   </head>
   <body>
     <canvas id="gameCanvas"></canvas>
-    <script type="module" src="lib/main.js" defer></script>
+    <script type="module" src="src/main.js" defer></script>
   </body>
 </html>
